Role-based authorization added